Version 2.02.74 - 
==================================
  Reinitialize archive and backup handling on toolcontext refresh.
  Fix opprobriously slow I/O to cluster mirrors created with --nosync.
  Make poll_mirror_progress report PROGRESS_CHECK_FAILED if LV is not a mirror.
  Like mirrors, don't scan origins if ignore_suspended_devices() is set.
  Fix return type qualifier to avoid compiler warning. (2.02.69)
  Automatically generate LSB Requires-Start for clvmd init script.
  Fix return code of pvmove --abort PV.
  Fix pvmove --abort to remove even for empty pvmove LV.
  Add configure --with-default-data-alignment.
  Update heuristic used for default and detected data alignment.
  Add "devices/default_data_alignment" to lvm.conf.
  Add implmentation for simple numeric 'get' property functions.
  Define GET_NUM_PROPERTY_FN macro to simplify numeric property 'get' function
  Add properties.[ch] to lib/report, defined based on columns.h.
  Add macro definitions to report infrastructure for character array length.
  Remove explicit double quotes from columns.h 'id' entries.
  Add 'flags' field to columns.h and define FIELD_MODIFIABLE.
  Add vg_mda_size and vg_mda_free functions.
  Simplify MD/swap signature detection in pvcreate and allow aborting.
  Remove assumption that --yes must be used only in --force mode.
  Fix file descriptor leak in swap signature detection error path.
  Detect and allow abort in pvcreate if LUKS signature is detected.
  Use proper locks mask when checking for LCK_WRITE.

Version 2.02.73 - 18th August 2010
==================================
  Fix potential for corruption during cluster mirror device failure.
  Use 'SINGLENODE' instead of 'dead' in clvmd singlenode messages.
  Ignore snapshots when performing mirror recovery beneath an origin.
  Pass LCK_ORIGIN_ONLY flag around cluster.
  Add suspend_lv_origin and resume_lv_origin using LCK_ORIGIN_ONLY.
  Allow internal suspend and resume of origin without its snapshots.